--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,23 +4,22 @@
       <h1>About me</h1>
       <p class="intro">I'm a Full Stack Developer from São Paulo, Brazil.</p>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget velit metus. Nam porttitor fermentum mi,
-        quis pulvinar ipsum tristique a. In viverra varius purus, non efficitur risus finibus vitae. Phasellus quis massa auctor,
-        vestibulum magna et, viverra eros. Phasellus egestas nibh vitae sapien sollicitudin convallis. Proin id est commodo, consequat purus et,
-        lacinia tortor. Phasellus vitae finibus dui.
+        I am an Information Technology enthusiastic graduated in
+        <em>Computer Science</em> and
+        <em>MBA in Software Engineer with agile methods</em>. Since 2014 I have been developing great portals and corporate systems.
+        I have a passion for beautiful and clean code and I also love challenges and turn problems into beautiful solutions.
+        When I am not coding, I can be found at the gym, practicing sports or simply learning something new.
       </p>
-
+      <h5>Let's make something awesome!!</h5>
     </div>
     <div class="img-panel">
-        <img src="/assets/mlassakoski.png" alt="Mauricio Lassakoski" class="circle responsive-img">
+      <img src="/assets/mlassakoski.png" alt="Mauricio Lassakoski" class="circle responsive-img">
     </div>
   </div>
 
   <div class="skill-panel">
-
     <mlassakoski-bar-chart [data]="skills"></mlassakoski-bar-chart>
-
-    <!-- <img src="/assets/oracle_logo.png" alt="oracle cerfified" class="responsive-img"> -->
+    <img src="/assets/oracle_logo.png" alt="oracle cerfified" class="responsive-img">
   </div>
 
 </div>
