--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,3 +1,5 @@
+$dark-gray:  #555;
+
 .about-me {
     font-family: "Roboto:900";
     display: flex;
@@ -10,7 +12,11 @@
             font-size: 2.5em;
             line-height: 1.3em;
             margin-bottom: 0.7em;
-            color: #555;
+            color: $dark-gray;
+        }
+        p {
+          font-size: 1.2em;
+          text-align: justify;
         }
     }
     .img-panel {
@@ -27,8 +33,12 @@
 .skill-panel {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     flex-wrap: wrap;
     margin: 1rem 0 1rem 0;
+    img {
+      max-width:  25rem;
+    }
 }
 
 @media only screen and (min-width: 1024px) {
