--- a/src/app/shared/bar-chart/bar-chart.component.html
+++ b/src/app/shared/bar-chart/bar-chart.component.html
@@ -1,4 +1,4 @@
-<div class="bar-box" [ngStyle]="{'width': width}">
+<div class="bar-box">
   <div class="bar" *ngFor="let item of data">
     <div class="bar-fill"  [ngStyle]="item.style">
       <div class="bar-text">{{ item.name }}</div>
