--- a/src/app/shared/bar-chart/bar-chart.component.scss
+++ b/src/app/shared/bar-chart/bar-chart.component.scss
@@ -5,7 +5,7 @@ $light-gray: #ccc;
 $dark-gray:  #555;
 
 .bar-box {
-  width: 40rem;
+  width: 100%;
   height: 100%;
   margin: 2rem 0 2rem 0;
   .bar {
