--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,10 +1,13 @@
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 @import url(https://fonts.googleapis.com/css?family=Roboto:900);
 @import '~animate.css';
 @import 'variables.scss';
 $body-fill: #fafafa;
 $black: #000;
-body {
-    background: $body-fill;
+
+body,
+html {
+  background: $body-fill;
 }
 
 .main-container {
