--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -34,26 +34,27 @@
                       justify-content: center;
                       position: relative;
                       background: #f6fafa;
-                      border-radius: .4em;
+                      border-radius: 0.4em;
                       padding: 0.4rem;
                       font-family: 'Roboto';
                       span {
                           font-size: 1.5rem;
                       }
-                  }
-                  .speech-bubble:after {
-                      content: '';
-                      position: absolute;
-                      bottom: 0;
-                      left: 50%;
-                      width: 0;
-                      height: 0;
-                      border: 30px solid transparent;
-                      border-top-color: #f6fafa;
-                      border-bottom: 0;
-                      border-left: 0;
-                      margin-left: -15px;
-                      margin-bottom: -28px;
+
+                      &::after {
+                        content: '';
+                        position: absolute;
+                        bottom: 0;
+                        left: 50%;
+                        width: 0;
+                        height: 0;
+                        border: 30px solid transparent;
+                        border-top-color: #f6fafa;
+                        border-bottom: 0;
+                        border-left: 0;
+                        margin-left: -15px;
+                        margin-bottom: -28px;
+                      }
                   }
               }
           }
@@ -70,33 +71,33 @@
           position: relative;
           transform: rotate(180deg);
           .outer_glow {
-              height: 0px;
+              height: 0;
               width: 26px;
               border-radius: 5px;
               filter: blur(10px);
               position: absolute;
               left: -8px;
               top: 3.7rem;
-              transition: all 0.6s cubic-bezier(0.860, 0.000, 0.070, 1.000);
+              transition: all 0.6s cubic-bezier(0.86, 0, 0.07, 1);
           }
           .middle_glow {
-              height: 0px;
+              height: 0;
               width: 10px;
               border-radius: 5px;
               position: absolute;
               top: 3.7rem;
               filter: blur(2px);
-              transition: all 0.6s cubic-bezier(0.860, 0.000, 0.070, 1.000);
+              transition: all 0.6s cubic-bezier(0.86, 0, 0.07, 1);
           }
           .core_glow {
-              height: 0px;
+              height: 0;
               width: 6px;
               background-color: #fff;
               border-radius: 5px;
               position: absolute;
               top: 3.7rem;
               filter: blur(1px);
-              transition: all 0.6s cubic-bezier(0.860, 0.000, 0.070, 1.000);
+              transition: all 0.6s cubic-bezier(0.86, 0, 0.07, 1);
               left: 2px;
           }
           .handle {
