fixed mobile menu btn

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,10 +26,10 @@
 
       <!-- social media -->
       <div class="social-media-icon">
-        <a href="https://github.com/mlassakoski" target="_blank">
+        <a href="https://github.com/mlassakoski" target="_blank" rel="noopener">
           <i class="fa fa-github fa-2x" aria-hidden="true"></i>
         </a>
-        <a href="https://www.linkedin.com/in/mauriciolassakoski" target="_blank">
+        <a href="https://www.linkedin.com/in/mauriciolassakoski" target="_blank" rel="noopener">
           <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
         </a>
       </div>
